fix second font

--- a/client/src/styles.sass
+++ b/client/src/styles.sass
@@ -10,11 +10,12 @@ $color6: #136C1F
    src: url("./fonts/Luckies/LuckiestGuy-Regular.ttf") format("truetype")
 $fontPrimary: 'fontPrimary'
 
-@font-faceSecondary
+@font-face
    font-family: 'fontSecondary'
    src: url("./fonts/OpenSans/OpenSans-Regular.ttf") format("truetype")
-   
 $fontSecondary: 'fontSecondary'
+
+   
 $sizeText_m: 2vh
 $sizeText_l: 2.5vh
 .web
