--- a/client/src/Pages/Components/elements/elements.sass
+++ b/client/src/Pages/Components/elements/elements.sass
@@ -42,6 +42,11 @@
  border-radius: 9px
  margin-right: 11%
  font-size: $sizeText_l
+.skeletonf
+ display: flex
+ width: 100%
+ height: auto
+ flex-direction: column
   //MVL
 @media (max-width: 480px)
  .minheightUI
