google map is incorporated with api key and markers with geocode saved in state

--- a/client/src/Components/Dropdown/Dropdown.sass
+++ b/client/src/Components/Dropdown/Dropdown.sass
@@ -5,6 +5,8 @@
  background: white !important 
  font-family: $fontSecondary
  margin-top: 4%
+ width: 74%
+ margin-left: 9%
 .my-custom-react-select__control 
  border-width: 1px !important
  border-color: $colorPrimary  !important
@@ -30,3 +32,6 @@
 @media (max-width: 480px)
  .my-custom-react-select__menu
   font-size: 11px
+ .reactSelect
+  width: 97%
+  margin: 0  
