--- a/client/src/Pages/Components/filtersUI/filtersUI.sass
+++ b/client/src/Pages/Components/filtersUI/filtersUI.sass
@@ -1,18 +1,23 @@
 @import "../../../styles.sass";
 .filterUI
- width: 20%
+ width: 96%
  height: auto
- padding: 3% 2% 0% 2%
+ padding: 2% 2% 0% 2%
  background: #ced4da
 .filterUIc
  width: 100%
- height: 333px
+ height: 315px
  display: flex
- justify-content: space-between
+ justify-content: start
  align-items: center
  flex-direction: column
+.filtersdiv
+ display: flex
+ width: 100%
+ height: auto
+ flex-direction: column
 .filterUI_c
- margin: 6% 0% 6% 0%
+ //margin: 6% 0% 6% 0%
  width: 100%
 
 .Button_filterUI
@@ -25,11 +30,13 @@
 .propieties_filterUI
  display: flex
  width: 100%
+ margin-top: 4%
 
- flex-direction: column
+ //flex-direction: column
  justify-content: space-between
- align-items: center
-
+ align-items: flex-end
+.titleOption
+ text-align: center
   //MVL
 @media (max-width: 480px)
  .titleOption
@@ -41,18 +48,24 @@
   justify-content: space-between
   align-items: flex-end
   margin-top: 2%
+ .filterUI
+  background: #ced4da8a
+  position: absolute
+  top: 226px
+  padding: 0
  .filterUIc
   height: auto
+  flex-direction: column-reverse
  .filterUI_c
   width: 31%
   margin: 0
-  margin-bottom: 2%
   height: 54%
   text-align: center
   font-size: 15px
   font-size: 11px
  .Button_filterUI
-  margin-top: 4%
- 
+  margin-top: 2%
+ .filtersdiv
+  margin-top: 2%
 
 
