--- a/client/src/Pages/Components/elements/elements.sass
+++ b/client/src/Pages/Components/elements/elements.sass
@@ -47,9 +47,15 @@
  width: 100%
  height: auto
  flex-direction: column
+.detailsButton
+ display: flex
+ justify-content: space-evenly
+ flex-direction: column
   //MVL
 @media (max-width: 480px)
  .minheightUI
   min-height: 150px
   font-size: 15px
-
+ .detailsButton
+  flex-direction: column
+  
