icons of custom bookmarks and ids are added to be able to navigate by clicking

--- a/client/src/Components/Map/map.sass
+++ b/client/src/Components/Map/map.sass
@@ -1,3 +1,4 @@
+@import "../../styles.sass";
 .body
  font-size: 1vw
 .map
@@ -5,10 +6,13 @@
  width: 100%
  margin: auto
 .makerTitle
- color: black !important
- font-size: 12px !important
+ color: white !important
+ font-size: 1vw !important
  margin-top: 70px
- font-weight: 500
+ background: #3E8F32
+ width: 90px
+ font-family: $fontSecondary !important
+ white-space: pre-wrap
 .inputSearch
  margin-top: 12px
 .marcMap
@@ -32,3 +36,5 @@
   font-size: 11px
  .map
   height: 297px
+ .makerTitle
+  font-size: 11px !important
