when selecting a bookmark, the card is automatically selected in the scroll

--- a/client/src/Pages/Components/elements/elements.sass
+++ b/client/src/Pages/Components/elements/elements.sass
@@ -51,6 +51,8 @@
  display: flex
  justify-content: space-evenly
  flex-direction: column
+.cardselect
+ background: $color5 !important
   //MVL
 @media (max-width: 480px)
  .minheightUI
